Fix layout bugs.

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,7 +1,8 @@
 .App {
     display: flex;
-    position: absolute;
+    position: relative;
     width: 100%;
+    height: 100%;
 }
 
 .App-header {
@@ -9,11 +10,12 @@
     height: 150px;
     padding: 20px 20px 20px 30px;
     transition: all 1s;
-    max-height: 320px;
+    height: 325px;
 }
 
 .selection-panel {
     width: 55%;
+    flex: 1;
 }
 
 @media all and (max-width: 768px) {
